<resources>
    <string name="app_name">AppSocle</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="g">G</string>
    <string name="Password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome">Welcome</string>
    <string name="remember_me">Remember me</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="about">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_current_version_is">The current version is</string>
    <string name="AboutText">This application was developed in 2016 in an internship in Sifast.It is an android socle app</string>
    <string name="feedback">Feedback</string>
    <string name="cancel">Cancel</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="save">Save</string>
    <string name="emailWelcomeText">we are very happy that you joined our app, we hope that you enjoy it</string>
    <string name="welcomeSubject">Welcome in our app</string>
    <string name="resetPasswordMailSubjet">"New password"</string>
    <string name="emailResetPassswordtext1"> "your password was changed and this is the new one "</string>
    <string name="emailResetPassswordtext2"> ",we advise you to change it. \n best regards."</string>
    <string name="resetPasswordToast">Your password was succesfully changed</string>
    <string name="notValidMailError">this mail is not valid</string>
    <string name="googleSignInError">You failed to connect with google</string>
    <string name="forgotPasswordDialogTitle">Forgot password</string>
    <string name="nullFeedbackError">Null message</string>
    <string name="successfeedbackMessage">Your feedback was succesfully sent</string>
    <string name="markerTitle">My position</string>
    <string name="maPosition">here i am !!</string>
    <string name="wrongPasswordError">Wrong password</string>
    <string name="tokenPasswordError">This email was token</string>
    <string name="pswdsSemilarituError">Passwords are not alike</string>
    <string name="pswdShortError">Short password</string>
    <string name="feedbackLoadingMsg">Loading your feedbacks</string>
    <string name="waitMsg">wait ...</string>
    <string name="zeroAlertToast">You have 0 alert</string>
    <string name="connectedUserLabel"> Connected user :</string>
    <string name="enableGpsMsg">please enable the gps</string>
    <string name="abtLabel">About</string>
    <string name="checkInputsMsg">Please check your inputs</string>
    <string name="usernameExistanceError">This username already exists</string>
    <string name="mailExistError">Email already exist</string>
    <string name="authentificationLabel"> Authentification</string>
    <string name="notAuthMsg">Not auentificated</string>
    <string name="checkPswdMsg">Check your passwrd</string>
    <string name="sorryLabel">Sorry</string>
    <string name="UsernameNotExistError">This username do not exist</string>
    <string name="zeroMarkersMsg">You have no markers to load</string>
    <string name="registrationLabel">Registration</string>
    <string name="feedbackSentMsg">Feedback sent</string>
    <string name="dataChangedMsg">Profile changed succesfully</string>
    <string name="geolocatioLabel"> Geolocation</string>
    <string name="marketToast">unable to find market app</string>
    <string name="userAddedToast">User added successfully</string>
    <string name="geolocation">Geolocation</string>
    <string name="settings">Settings</string>
    <string name="my_history">My History</string>
    <string name="rate_me">Rate me</string>
    <string name="PasswordForgotten">Password forgotten</string>
    <string name="usernameDontExistError">User do not exist</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="renter_new_password">Renter new password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Log out</string>
    <string name="pswdsNotAlike">passwords are not alike</string>
</resources>
