<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/icHistory"
            android:icon="@drawable/ic_rotate_right_black_24dp"
            android:title="@string/my_history" />
        <item
            android:id="@+id/icPin"
            android:icon="@drawable/ic_room_black_24dp"
            android:title="@string/geolocatioLabel" />
        <item
            android:id="@+id/icSettings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/icStar"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/rate_me" />
            <item
                android:id="@+id/icInfo"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
